k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hmipmonitor-service
spec:
  selector:
    app: hmipmonitor
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
