k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hmipmonitor-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/whitelist-source-range:  192.168.2.0/24
    nginx.ingress.kubernetes.io/upstream-vhost: "192.168.2.126" # ip of node :-(
spec:
  rules:
  - host: hmip.h5b.de
    http:
      paths:
      - path: /
        backend:
          serviceName: hmipmonitor-service
          servicePort: 80
  - host: www.hmip.h5b.de
    http:
      paths:
      - path: /
        backend:
          serviceName: hmipmonitor-service
          servicePort: 80
